--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <title>The Waterfall Flow</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="layout.css">
 
 </head>
    
